--- a/style.css
+++ b/style.css
@@ -306,6 +306,15 @@ body {
   align-items: center;
   pointer-events: none;
 }
+
+.event-container{
+  display: flex;
+  justify-content: space-between;
+}
+.event .event-container .delete-container .delete-icon i{
+  font-size: 1rem;
+}
+
 .events .event .title .event-title {
   font-size: 1rem;
   font-weight: 400;
@@ -329,7 +338,7 @@ body {
   color: #fff;
 }
 /* add tick in event after */
-.events .event::after {
+/* .events .event::after {
   content: "✓";
   position: absolute;
   top: 50%;
@@ -342,7 +351,7 @@ body {
   opacity: 0.3;
   color: var(--primary-clr);
   transform: translateY(-50%);
-}
+} */
 .events .event:hover::after {
   display: flex;
 }
@@ -384,6 +393,7 @@ body {
   bottom: 100px;
   left: 50%;
   width: 90%;
+  height: 32%;
   max-height: 0;
   overflow: hidden;
   border-radius: 5px;
@@ -392,7 +402,8 @@ body {
   transition: max-height 0.5s ease;
 }
 .add-event-wrapper.active {
-  max-height: 350px;
+  max-height: 400px;
+  overflow-y: scroll;
 }
 .add-event-header {
   width: 100%;
@@ -431,7 +442,7 @@ body {
   justify-content: space-between;
   gap: 10px;
 }
-.add-event-body .add-event-input input {
+.add-event-body .add-event-input input,select {
   width: 100%;
   height: 100%;
   outline: none;
@@ -441,6 +452,17 @@ body {
   font-size: 1rem;
   font-weight: 400;
   color: #373c4f;
+}
+select{
+  opacity: .6;
+  margin-left: -3px;
+}
+.add-event-input .add-room-btn{
+  padding-right: 0;
+  padding-right: 0;
+}
+.add-room-btn button{
+  width: 100px;
 }
 .add-event-body .add-event-input input::placeholder {
   color: #a5a5a5;
@@ -455,7 +477,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 5px 20px;
 }
 .add-event-footer .add-event-btn {
   height: 40px;
@@ -579,14 +601,4 @@ body {
   pointer-events: none; /* Prevents the pseudo-element from blocking interactions */
   opacity: 0.7; /* Adjust the opacity value to match the input */
   transition: opacity 0.2s ease; /* Optional: Add a transition effect */
-}
-
-/* Hide the browser's default date input arrow */
-.custom-date-input::-webkit-calendar-picker-indicator {
-  display: none;
-}
-
-/* Style for the custom placeholder effect when the input is not empty */
-.custom-date-input:not(:placeholder-shown) + .custom-date-placeholder {
-  opacity: 0;
 }
