--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 }
 .container {
   position: relative;
-  width: 1200px;
+  width: 1400px;
   min-height: 850px;
   margin: 0 auto;
   padding: 5px;
@@ -242,7 +242,7 @@ body {
 }
 .container .right {
   position: relative;
-  width: 40%;
+  width: 50%;
   min-height: 100%;
   padding: 20px 0;
 }
@@ -282,7 +282,7 @@ body {
 }
 .events .event {
   position: relative;
-  width: 95%;
+  /* width: 95%; */
   min-height: 70px;
   display: flex;
   justify-content: center;
@@ -311,10 +311,14 @@ body {
   display: flex;
   justify-content: space-between;
 }
+.delete-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .event .event-container .delete-container .delete-icon i{
   font-size: 1rem;
 }
-
 .events .event .title .event-title {
   font-size: 1rem;
   font-weight: 400;
@@ -372,11 +376,42 @@ body {
   background-color: transparent;
   cursor: pointer;
 }
+
 .add-event:hover {
   opacity: 1;
 }
 .add-event i {
   pointer-events: none;
+}
+
+.add-room {
+  position: absolute;
+  bottom: 30px;
+  right: 80px;
+  /* width: 40px; */
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  padding: 5px 20px;
+}
+.add-room button{
+  height: 40px;
+  font-size: 1rem;
+  font-weight: 500;
+  outline: none;
+  border: none;
+  color: #fff;
+  background-color: var(--primary-clr);
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px 10px;
+  border: 1px solid var(--primary-clr);
+}
+.add-room button:hover {
+  background-color: transparent;
+  color: var(--primary-clr);
 }
 .events .no-event {
   width: 100%;
@@ -388,6 +423,7 @@ body {
   font-weight: 500;
   color: #878895;
 }
+
 .add-event-wrapper {
   position: absolute;
   bottom: 100px;
